<resources>
    <string name="app_name">ProyectoMoviles</string>
    <string name="ingreso">Ingreso</string>
    <string name="nombre">Nombre</string>
    <string name="password">Password</string>
    <string name="boton">Ingresar</string>
    <string name="historial">Historial</string>
    <string name="enfermedad">Enfermedad</string>
    <string name="tratamiento">Tratamiento</string>
    <string name="codHistorial">Código</string>
    <string name="fechaHistorial">Fecha</string>
    <string name="observacionHistorial">Observaciones</string>
    <string name="aceptar">Aceptar</string>
    <string name="usoTratamiento">Uso Tratamiento</string>
</resources>
