<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/ingreso"
            android:layout_width="147dp"
            android:layout_height="55dp"
            android:id="@+id/textView" android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAlignment="center" android:textSize="30sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombre" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/textView"
            android:hint="@string/nombre"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText2" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/txtNombre"
            app:layout_constraintEnd_toEndOf="@+id/txtNombre" app:layout_constraintStart_toStartOf="@+id/txtNombre"
            app:layout_constraintHorizontal_bias="1.0" android:hint="@string/password"/>
    <Button
            android:text="@string/boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnIngresar" app:layout_constraintStart_toStartOf="@+id/editText2"
            app:layout_constraintEnd_toEndOf="@+id/editText2" android:layout_marginTop="136dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintHorizontal_bias="0.496"/>
</android.support.constraint.ConstraintLayout>