<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OpcionesActivity">

    <Button
            android:text="@string/historial"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnHistorial"
            android:layout_marginTop="156dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.501"/>
    <Button
            android:text="@string/enfermedad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEnfermedad" android:layout_marginTop="112dp"
            app:layout_constraintTop_toBottomOf="@+id/btnHistorial" app:layout_constraintEnd_toEndOf="@+id/btnHistorial"
            app:layout_constraintStart_toStartOf="@+id/btnHistorial" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/tratamiento"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnTratamiento" android:layout_marginTop="116dp"
            app:layout_constraintTop_toBottomOf="@+id/btnEnfermedad"
            app:layout_constraintEnd_toEndOf="@+id/btnEnfermedad"
            app:layout_constraintStart_toStartOf="@+id/btnEnfermedad"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/btnTratamiento"
            app:layout_constraintEnd_toEndOf="@+id/btnTratamiento"
            app:layout_constraintStart_toStartOf="@+id/btnTratamiento" app:layout_constraintHorizontal_bias="0.537"/>
</android.support.constraint.ConstraintLayout>